--- a/projeto.html
+++ b/projeto.html
@@ -1,11 +1,249 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nossas Ações - Amazonia Verdejante</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml" />
+    <script src="js/theme-loader.min.js"></script>
+  </head>
+  <body>
+    <div class="acessibilidade-container">
+      <button
+        id="btn-acessibilidade"
+        aria-label="Ferramentas de Acessibilidade"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          width="28px"
+          height="28px"
+        >
+          <path
+            d="M12 2c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2zm9 7h-6v13h-2v-6h-2v6H9V9H3V7h18v2z"
+          />
+        </svg>
+      </button>
+      <div id="menu-acessibilidade" class="acessibilidade-menu">
+        <ul>
+          <li><button>Aumentar Texto</button></li>
+          <li><button>Diminuir Texto</button></li>
+          <li><button>Alto Contraste</button></li>
+          <li><button>Modo Escuro</button></li>
+        </ul>
+      </div>
+    </div>
+
+    <header class="header-padrao">
+      <div class="logo">
+        <a href="index.html" aria-label="Página inicial da Amazonia Verdejante">
+          <img src="images/logo.png" alt="" class="logo-icon" />
+          <span>Amazonia Verdejante</span>
+        </a>
+      </div>
+      <button
+        class="btn-hamburguer"
+        aria-label="Abrir menu"
+        aria-expanded="false"
+        aria-controls="menu-navegacao"
+      >
+        <svg>...</svg>
+      </button>
+      <nav class="amazonia-nav">
+        <ul id="menu-navegacao">
+          <li><a href="index.html">Início</a></li>
+          <li><a href="projeto.html">Nossas Ações</a></li>
+          <li><a href="cadastro.html">Participe</a></li>
+          <li><a href="./projeto.html" class="btn-cta">Doe Agora</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="secao secao-cta secao-escura cta-voluntario">
+        <div class="cta-conteudo">
+          <h2>Seja um Voluntário!</h2>
+          <p>
+            Suas mãos podem fazer a diferença! Participe de nossos mutirões de
+            plantio, ajude no viveiro de mudas ou contribua com suas habilidades
+            (comunicação, TI, etc.). Venha sentir a energia da floresta e fazer
+            parte da solução.
+          </p>
+          <a href="cadastro.html" class="btn-principal">Quero ser Voluntário</a>
+        </div>
+      </section>
+      <section class="secao">
+        <h2>Conheça Nossas Ações</h2>
+        <div class="card-container">
+          <article class="card card--projeto">
+            <img src="./images/plantil.png" alt="Plantio de mudas nativas" />
+            <div class="card__conteudo">
+              <h3>Plantio de Mudas Nativas</h3>
+              <p>
+                Organizamos mutirões e parcerias para plantar espécies
+                amazônicas em áreas prioritárias, acelerando a regeneração
+                natural e aumentando a cobertura florestal.
+              </p>
+              <a href="#" class="btn-principal">Ver Detalhes</a>
+            </div>
+          </article>
+          <article class="card card--projeto">
+            <img
+              src="./images/monitoramento.png"
+              alt="Pesquisador monitorando fauna"
+            />
+            <div class="card__conteudo">
+              <h3>Monitoramento de Fauna e Flora</h3>
+              <p>
+                Utilizamos tecnologia (câmeras, drones) e conhecimento local
+                para monitorar a biodiversidade, identificar ameaças e medir o
+                impacto de nossas ações de restauração.
+              </p>
+              <a href="#" class="btn-principal">Ver Detalhes</a>
+            </div>
+          </article>
+          <article class="card card--projeto">
+            <img
+              src="./images/educacao-ambiental.jpg"
+              alt="Oficina de educação ambiental"
+            />
+            <div class="card__conteudo">
+              <h3>Educação Ambiental Comunitária</h3>
+              <p>
+                Realizamos oficinas e programas educativos em escolas e
+                comunidades, promovendo a conscientização sobre a importância da
+                Amazônia e práticas sustentáveis.
+              </p>
+              <a href="#" class="btn-principal">Ver Detalhes</a>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="secao secao-cta cta-doacao">
+        <div class="cta-conteudo">
+          <h2>Apoie Nossas Causas</h2>
+          <p>
+            Sua doação se transforma em árvores, protege habitats e educa
+            comunidades. Com R$ 30, plantamos 5 mudas. Com R$ 100, ajudamos a
+            manter uma armadilha fotográfica. Cada contribuição fortalece nossa
+            luta pela Amazônia.
+          </p>
+          <a href="#" class="btn-principal btn-outline">Faça sua Doação</a>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="footer-container">
+        <div class="footer-coluna-contato">
+          <h2>Contato</h2>
+          <address>
+            <p>Sede: Manaus - AM, Brasil</p>
+            <p>Telefone: (92) 9999-0000</p>
+            <p>Email: contato@amazoniaverdejante.org</p>
+            <div class="redes-sociais">
+              <a href="#" aria-label="LinkedIn"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                  />
+                </svg>
+              </a>
+              <a href="#" aria-label="Instagram"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.012 3.584-.07 4.85c-.148 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.85s.012-3.584.07-4.85c.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.85-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.947s-.014-3.667-.072-4.947c-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.689-.073-4.948-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+                  />
+                </svg>
+              </a>
+              <a href="#" aria-label="Facebook">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
+                  />
+                </svg>
+              </a>
+              <a href="#" aria-label="YouTube">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="currentColor"
+                >
+                  <path
+                    d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 4-8 4z"
+                  />
+                </svg>
+              </a>
+            </div>
+          </address>
+        </div>
+        <div class="newsletter-form">
+          <h2>Receba Novidades</h2>
+          <form>
+            <input type="text" placeholder="Seu nome" required />
+            <input type="email" placeholder="Seu e-mail" required />
+            <button type="submit" class="btn-principal">Inscrever</button>
+          </form>
+        </div>
+        <div class="links-rapidos">
+          <h2>Navegue</h2>
+          <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="projeto.html">Nossas Ações</a></li>
+            <li><a href="cadastro.html">Participe</a></li>
+            <li><a href="#">Doe Agora</a></li>
+          </ul>
+          <p>&copy; 2025 Amazonia Verdejante</p>
+        </div>
+      </div>
+      <a href="#" id="btn-voltar-topo" aria-label="Voltar ao topo da página">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          width="24px"
+          height="24px"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4.5 15.75l7.5-7.5 7.5 7.5"
+          />
+        </svg>
+      </a>
+    </footer>
+    <script src="https://unpkg.com/imask"></script>
+    <script src="js/script.min.js"></script>
+  </body>
 </html>
